# git-pr

./: Cargo.toml  README.md  git-pr.yaml  pr_tags.txt  shell.nix
src/: app.rs  cli.rs  config.rs  error.rs  errors.rs  git.rs  github.rs  jira.rs  lib.rs  main.rs  pr.rs  tags.rs  template.rs  ui.rs
src/tags/: tags.rs
