[package]
name = "git-pr"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15.0"
regex = "1"
shell-words = { version = "1.1.0", optional = true }
tempfile = "3.1.0"
which = { version = "4.0", default-features = false, optional = true }
inquire = { version = "0.5.2", features = ["editor"] }
hubcaps = "0.6"
serde_json = "1.0.82"
serde = "1.0.140"
colored = "2.0.0"
lazy_static = "1.4.0"
clap = { version = "4.0.22", features = ["derive"] }
config = "0.13.1"
thiserror = "1.0.37"
toml = "0.5.9"
jira_query = "1.1.0"
