[package]
name = "git-pr"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
regex = "1.11.1"
shell-words = { version = "1.1.0", optional = true }
tempfile = "3.14.0"
which = { version = "4.4.2", default-features = false, optional = true }
inquire = { version = "0.5.3", features = ["editor"] }
hubcaps = "0.6.2"
serde_json = "1.0.132"
serde = "1.0.214"
colored = "2.1.0"
lazy_static = "1.5.0"
clap = { version = "4.5.20", features = ["derive", "cargo", "env"] }
config = "0.13.4"
thiserror = "1.0.69"
toml = "0.5.11"
jira_query = "1.5.0"
