[package]
name = "git-pr"
version = "1.0.0"
edition = "2021"
description = "A highly opinionated tool for PR creation with automatic related PR tracking"
license = "MIT"
repository = "https://github.com/IAmRadek/git-pr"
keywords = ["git", "github", "pull-request", "cli"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI framework
clap = { version = "4.5.20", features = ["derive", "cargo", "env"] }

# Git operations
git2 = "0.19.0"

# Terminal UI
inquire = { version = "0.5.3", features = ["editor"] }
colored = "2.1.0"

# Serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0.69"

# Utilities
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.14.0"

# Uncomment when implementing Jira integration
# [dependencies.jira_query]
# version = "1.5.0"
# optional = true
#
# [features]
# jira = ["jira_query"]
